fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Ayırıcı",
   "Image": "Resim",
   "Sorry, an error occurred uploading the file": "Üzgünüz, dosya yüklenirken bir hata oluştu",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Bir başlık yazın",
   "Info": "Bilgi",
   "Info notice": "Bilgi bildirimi",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Kendinizi temsil edecek bir fotoğraf veya resim seçin.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Bu, gerçek adınız veya bir takma adınız olabilir — insanların size nasıl hitap etmesini isterseniz.",
   "Email address": "E-posta adresi",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Davet gerektirmek istediğinizden emin misiniz?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Yeni kullanıcıların bir hesap oluşturmak için önce davet edilmesi gerekecektir. <em>Varsayılan rol</em> ve <em>İzin verilen alan adları</em> artık geçerli olmayacaktır.",
   "Settings that impact the access, security, and content of your workspace.": "Çalışma alanınızın erişim, güvenlik ve içeriğini etkileyen ayarlar.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Etkinleştirildiğinde, kullanıcılar kendi hesaplarını çalışma alanından silebilirler",
   "Rich service embeds": "Zengin hizmet yerleştirmeleri",
   "Links to supported services are shown as rich embeds within your documents": "Desteklenen hizmetlere bağlantılar, belgelerinizde zengin yerleştirmeler olarak gösterilir",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Koleksiyon oluşturma",
   "Allow editors to create new collections within the workspace": "Düzenleyicilerin çalışma alanında yeni koleksiyonlar oluşturmasına izin ver",
   "Workspace creation": "Çalışma alanı oluşturma",
