fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Роздільник",
   "Image": "Зображення",
   "Sorry, an error occurred uploading the file": "На жаль, під час завантаження файлу сталася помилка",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Напишіть підпис",
   "Info": "Інформація",
   "Info notice": "Інформаційне повідомлення",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Виберіть фотографію або зображення, щоб представити себе.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Це може бути ваше справжнє ім’я чи псевдонім — як би ви хотіли, щоб люди зверталися до вас.",
   "Email address": "Адреса електронної пошти",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Ви впевнені, що хочете вимагати запрошень?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Нових користувачів спочатку потрібно буде запросити для створення облікового запису. <em>Роль за замовчуванням</em> і <em>Дозволені домени</em> більше не застосовуватимуться.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Вбудовані розширення Rich service",
   "Links to supported services are shown as rich embeds within your documents": "Посилання до підтримуваних сервісів показані як багатофункціональні вкладення у ваші документи",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Створення колекції",
   "Allow editors to create new collections within the workspace": "Allow editors to create new collections within the workspace",
   "Workspace creation": "Workspace creation",
