fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -570,6 +570,7 @@
   "Divider": "分割线",
   "Image": "图片",
   "Sorry, an error occurred uploading the file": "抱歉，上传文件时发生错误",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "撰写一个标题",
   "Info": "信息",
   "Info notice": "提示信息",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "选择一张照片或图片作为您的头像。",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "这可以是您的真名，也可以是昵称 — 不管您希望别人怎么称呼您。",
   "Email address": "电子邮箱地址",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "你确定要发出邀请吗？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新用户首先需要通过邀请来创建一个账户。 <em>默认角色</em> 和 <em>允许的域</em> 将不再适用。",
   "Settings that impact the access, security, and content of your workspace.": "工作区全局设置：访问权限、安全性与内容管理。",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "如果启用，用户可以从工作区删除自己的帐户",
   "Rich service embeds": "富文本嵌入服务",
   "Links to supported services are shown as rich embeds within your documents": "受 Outline 服务支持的链接可作为富文本嵌入显示在您的文档中",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "文档集创建",
   "Allow editors to create new collections within the workspace": "允许成员在工作区中创建新的文档集",
   "Workspace creation": "工作区已创建",
