--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -570,6 +570,7 @@
   "Divider": "分隔線",
   "Image": "圖片",
   "Sorry, an error occurred uploading the file": "抱歉，上傳檔案時發生錯誤",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "撰寫說明文字",
   "Info": "資訊",
   "Info notice": "訊息通知",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "選擇一張照片或圖片來代表您。",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "這可以是您的真實姓名或暱稱，或任何您希望別人用來稱呼您的名字。",
   "Email address": "電子郵件地址",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "您確定您想要獲得邀請嗎？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新使用者在創建賬號前需要先被邀請。 <em>預設身份</em> 和 <em>允許使用的域名</em> 都將不再適用。",
   "Settings that impact the access, security, and content of your workspace.": "此處設定將影響您的知識庫存取、安全性、內容。",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "顯示嵌入的外部服務",
   "Links to supported services are shown as rich embeds within your documents": "支援的外部服務連結將會被嵌入顯示於您的文件中",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "文件集已建立",
   "Allow editors to create new collections within the workspace": "允許編輯者在工作區內建立新的文件集",
   "Workspace creation": "建立工作區",
