--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Phân cách",
   "Image": "Ảnh",
   "Sorry, an error occurred uploading the file": "Đã xảy ra lỗi khi đang tải lên ảnh",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Viết chú thích",
   "Info": "Thông tin",
   "Info notice": "Thông báo thông tin",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Chọn một bức ảnh hoặc hình ảnh để đại diện cho chính bạn.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Đây có thể là tên thật của bạn hoặc biệt hiệu mà bạn muốn mọi người nhắc đến mình.",
   "Email address": "Địa chỉ email",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Bạn có chắc chắn muốn yêu cầu lời mời không?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Người dùng mới trước tiên sẽ cần được mời để tạo tài khoản. <em>Vai trò mặc định</em> và <em>Các miền được phép</em> sẽ không còn áp dụng.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Dịch vụ nhúng phong phú",
   "Links to supported services are shown as rich embeds within your documents": "Các đường Link đến các dịch vụ được hỗ trợ được hiển thị dưới dạng nhúng phong phú trong tài liệu của bạn",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Tạo bộ sưu tập",
   "Allow editors to create new collections within the workspace": "Allow editors to create new collections within the workspace",
   "Workspace creation": "Workspace creation",
