fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Divisor",
   "Image": "Imagem",
   "Sorry, an error occurred uploading the file": "Desculpe, ocorreu um erro ao enviar arquivo",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Escreva uma legenda",
   "Info": "Informação",
   "Info notice": "Aviso de informação",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Escolha uma foto ou imagem para te representar.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Este pode ser o seu nome verdadeiro ou um apelido — como você gostaria que as pessoas se referissem a você.",
   "Email address": "Endereço de Email",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Tem certeza de que deseja exigir convites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Novos usuários precisarão primeiro ser convidados para criar uma conta. <em>Função padrão</em> e <em>Os domínios permitidos</em> não serão mais aplicáveis.",
   "Settings that impact the access, security, and content of your workspace.": "Configurações que afetam o acesso, a segurança e o conteúdo do seu espaço de trabalho.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Quando habilitado, os usuários podem excluir sua própria conta do espaço de trabalho",
   "Rich service embeds": "Incorporação de serviços",
   "Links to supported services are shown as rich embeds within your documents": "Links para serviços suportados são exibidos como incorporações ricas nos seus documentos",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Criação de coleção",
   "Allow editors to create new collections within the workspace": "Permitir que os editores criem coleções no espaço de trabalho",
   "Workspace creation": "Criação de espaço de trabalho",
