fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Pemisah",
   "Image": "Gambar",
   "Sorry, an error occurred uploading the file": "Maaf, terjadi kesalahan saat mengunggah gambar",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Tulis keterangan",
   "Info": "Informasi",
   "Info notice": "Pemberitahuan info",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Pilih sebuah foto atau gambar yang mewakili diri Anda.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Ini bisa berupa nama asli Anda, atau nama panggilan — bagaimanapun Anda ingin orang-orang merujuk Anda.",
   "Email address": "Alamat surel",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Anda yakin ingin mewajibkan undangan?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Pengguna baru pertama-tama harus diundang untuk membuat akun. <em>Peran default</em> dan <em>Domain yang diizinkan</em> tidak akan berlaku lagi.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Embed Rich service",
   "Links to supported services are shown as rich embeds within your documents": "Tautan ke layanan yang didukung ditampilkan sebagai Rich Embeds dalam dokumen Anda",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Pembuatan koleksi",
   "Allow editors to create new collections within the workspace": "Allow editors to create new collections within the workspace",
   "Workspace creation": "Workspace creation",
