--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -570,6 +570,7 @@
   "Divider": "جدا کننده",
   "Image": "تصویر",
   "Sorry, an error occurred uploading the file": "متأسفیم، هنگام بارگذاری فایل خطایی رخ داد",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "عنوانی بنویسید",
   "Info": "اطلاع‌رسانی",
   "Info notice": "اخطار اطلاع‌رسانی",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "یک عکس یا تصویر برای نمایندگی از خود انتخاب کنید.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "این می‌تواند نام واقعی شما یا یک نام مستعار باشد - هر طور که دوست دارید مردم به شما اشاره کنند.",
   "Email address": "آدرس ایمیل",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "آیا مطمئن هستید که می‌خواهید دعوت‌نامه‌ها الزامی شوند؟",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "کاربران جدید ابتدا باید دعوت شوند تا یک حساب کاربری ایجاد کنند. <em>نقش پیش‌فرض</em> و <em>دامنه‌های مجاز</em> دیگر اعمال نخواهند شد.",
   "Settings that impact the access, security, and content of your workspace.": "تنظیماتی که بر دسترسی، امنیت و محتوای فضای کاری شما تأثیر می‌گذارد.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "هنگامی که فعال باشد، کاربران می‌توانند حساب خود را از فضای کاری حذف کنند.",
   "Rich service embeds": "جاسازی‌های غنی سرویس‌ها",
   "Links to supported services are shown as rich embeds within your documents": "لینک‌ها به سایت‌ها و سرویس‌های پشتیبانی شده به صورت جاسازی‌های غنی در سندها نمایش داده می‌شود.",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "ایجاد مجموعه",
   "Allow editors to create new collections within the workspace": "اجازه به ویرایشگران برای ایجاد مجموعه‌های جدید در فضای کاری",
   "Workspace creation": "ایجاد فضای کاری",
