--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Skillelinje",
   "Image": "Bilde",
   "Sorry, an error occurred uploading the file": "Beklager, det oppstod en feil ved opplasting av filen",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Skriv en bildetekst",
   "Info": "Info",
   "Info notice": "Infovarsel",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Velg et bilde for å representere deg selv.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Dette kan være ditt virkelige navn, eller et kallenavn — slik du ønsker at folk skal omtale deg.",
   "Email address": "E-postadresse",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Er du sikker på at du vil kreve invitasjoner?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nye brukere må først inviteres for å opprette en konto. <em>Standardrolle</em> og <em>Tillatte domener</em> vil ikke lenger gjelde.",
   "Settings that impact the access, security, and content of your workspace.": "Innstillinger som påvirker tilgang, sikkerhet og innhold i arbeidsområdet ditt.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Når skrudd på kan brukere slette deres egen konto fra arbeidsområdet",
   "Rich service embeds": "Detaljerte tjenesteinnbygginger",
   "Links to supported services are shown as rich embeds within your documents": "Lenker til støttede tjenester vises som detaljerte innbygginger i dokumentene dine",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Opprettelse av samling",
   "Allow editors to create new collections within the workspace": "Tillat redaktører å opprette nye samlinger i arbeidsområdet",
   "Workspace creation": "Oppretting av arbeidsområde",
