fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -116,7 +116,7 @@
   "New emoji": "新しい絵文字",
   "Upload emoji": "絵文字をアップロード",
   "Disconnect": "接続を解除",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "アナリティクスを切断",
   "Home": "ホーム",
   "Drafts": "下書き",
   "Search": "検索",
@@ -138,8 +138,8 @@
   "Log out": "ログアウト",
   "Mark notifications as read": "通知を既読済みにする",
   "Archive all notifications": "全ての通知をアーカイブ",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "既読にする",
+  "Mark as unread": "未読にする",
   "New App": "新しいアプリ",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
