fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -141,8 +141,8 @@
   "Mark as read": "既読にする",
   "Mark as unread": "未読にする",
   "New App": "新しいアプリ",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "New Application": "アプリケーションを新規作成",
+  "This version of the document was deleted": "このバージョンのドキュメントは削除されました",
   "Link copied": "リンクをコピーしました",
   "Download revision": "Download revision",
   "Dark": "ダークモード",
@@ -186,7 +186,7 @@
   "currently viewing": "閲覧中",
   "previously edited": "編集済み",
   "You": "あなた",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "{{ name }} のアバター",
   "Viewers": "閲覧者",
   "Collections are used to group documents and choose permissions": "コレクションはドキュメントのグループ化や権限の選択に使用されます。",
   "Name": "名前",
@@ -194,7 +194,7 @@
   "Public document sharing": "公開されているドキュメントを共有",
   "Allow documents within this collection to be shared publicly on the internet.": "このコレクション内のドキュメントをインターネット上で公開することを許可します。",
   "Commenting": "コメントの追加",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "このコレクション内のドキュメントへのコメントを許可する。",
   "Saving": "保存",
   "Save": "保存",
   "Creating": "作成中",
@@ -260,15 +260,15 @@
   "Currently editing": "編集中",
   "Currently viewing": "閲覧中",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 前に閲覧済み",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "サポートされていないファイル形式です。PNG、JPG、GIF、WebP を使用してください。",
+  "File size too large. Maximum size is {{ size }}.": "ファイルサイズが大きすぎます。最大サイズは {{ size }} です。",
   "Please enter a name for the emoji": "Please enter a name for the emoji",
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "アップロード中",
-  "Add emoji": "Add emoji",
+  "Add emoji": "絵文字を追加",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
+  "Upload an image": "画像をアップロード",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
@@ -621,14 +621,14 @@
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
   "Account": "アカウント",
-  "API & Apps": "API & Apps",
+  "API & Apps": "API とアプリ",
   "Details": "詳細情報",
-  "Authentication": "Authentication",
+  "Authentication": "認証",
   "Security": "セキュリティ",
   "Features": "機能",
   "Members": "メンバー",
   "API Keys": "APIキー",
-  "Applications": "Applications",
+  "Applications": "アプリ",
   "Shared Links": "共有済みのリンク",
   "Import": "インポート",
   "Install": "Install",
