track access requests

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -352,6 +352,8 @@
   "Manage": "Manage",
   "Permissions for {{ userName }} updated": "Permissions for {{ userName }} updated",
   "Failed to approve access request": "Failed to approve access request",
+  "Access request dismissed": "Access request dismissed",
+  "Failed to dismiss access request": "Failed to dismiss access request",
   "Unknown": "Unknown",
   "Approve": "Approve",
   "Mark all as read": "Mark all as read",
@@ -802,6 +804,7 @@
   "Access request sent": "Access request sent",
   "Failed to send access request": "Failed to send access request",
   "No access to this doc": "No access to this doc",
+  "You have sucessfully sent a request to access this document. You will be notified once access is granted.": "You have sucessfully sent a request to access this document. You will be notified once access is granted.",
   "It doesn't look like you have permission to access this document.": "It doesn't look like you have permission to access this document.",
   "You can request access from a document manager.": "You can request access from a document manager.",
   "Request sent": "Request sent",
