fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
   "Apply template": "템플릿 적용",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "새 이모지",
+  "Upload emoji": "이모지 업로드",
   "Disconnect": "연결 해제",
   "Disconnect analytics": "분석 연결 해제",
   "Home": "홈",
@@ -1309,17 +1309,17 @@
   "Data Attributes": "Data Attributes",
   "Edit attribute": "Edit attribute",
   "Property": "Property",
-  "Yes": "Yes",
-  "No": "No",
+  "Yes": "예",
+  "No": "아니오",
   "Search or ask a question": "Search or ask a question",
   "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
-  "Can view only what is explicitly shared": "Can view only what is explicitly shared",
-  "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
-  "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
-  "References": "References",
-  "Enable AI answers to get direct answers to searched questions.": "Enable AI answers to get direct answers to searched questions.",
-  "Go to settings": "Go to settings",
-  "Where do I find the file?": "Where do I find the file?",
+  "Can view only what is explicitly shared": "명시적으로 공유된 내용만 볼 수 있습니다",
+  "SAML assertion was invalid or missing fields, please check your configuration": "SAML 어설션이 유효하지 않거나 필드가 누락되었습니다. 구성을 확인하십시오.",
+  "AI generated answer based on related documents in your workspace": "AI가 작업공간의 관련 문서를 기반으로 답변을 생성했습니다",
+  "References": "참조",
+  "Enable AI answers to get direct answers to searched questions.": "AI 답변을 활성화하면 검색한 질문에 대한 직접적인 답변을 얻을 수 있습니다.",
+  "Go to settings": "설정으로 이동",
+  "Where do I find the file?": "파일은 어디에서 찾을 수 있나요?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
   "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
   "Guests": "Guests",
