fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -144,7 +144,7 @@
   "New Application": "새 애플리케이션",
   "This version of the document was deleted": "이 문서의 버전은 삭제됨",
   "Link copied": "링크 복사됨",
-  "Download revision": "Download revision",
+  "Download revision": "수정본 다운로드",
   "Dark": "어둡게 보기",
   "Light": "밝게 보기",
   "System": "시스템",
@@ -386,7 +386,7 @@
   "Could not load reactions": "반응을 불러올 수 없음",
   "Reaction": "리액션",
   "{{ hours }}h {{ minutes }}m read": "읽는 데 {{ hours }}시간 {{ minutes }}분",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h read": "{{ hours }}시 읽음",
   "{{ minutes }}m read": "{{ minutes }}분 전에 읽음",
   "Revision deleted": "수정본 삭제됨",
   "{{count}} people": "{{count}} 명",
@@ -715,12 +715,12 @@
   "Add a description": "설명 추가",
   "Signing in": "로그인 중",
   "You can safely close this window once the Outline desktop app has opened": "Outline desktop 앱이 열리면 이 창을 안전하게 닫을 수 있습니다.",
-  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
-  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
-  "{{ count }} changes": "{{ count }} change",
-  "{{ count }} changes_plural": "{{ count }} changes",
-  "Previous change": "Previous change",
-  "Next change": "Next change",
+  "{{ current }} of {{ count }} changes": "{{ current }}개의 {{ count }}개의 변경 사항",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }}개의 {{ count }}개의 변경 사항",
+  "{{ count }} changes": "{{ count }} 변경",
+  "{{ count }} changes_plural": "{{ count }} 변경",
+  "Previous change": "이전 변경",
+  "Next change": "다음 변경",
   "Error creating comment": "댓글을 만드는 중에 오류가 발생했습니다.",
   "Add a comment": "댓글 달기",
   "Add a reply": "답글 달기",
@@ -768,7 +768,7 @@
   "Archived": "보관됨",
   "Save draft": "임시 저장",
   "Restore version": "버전 복원",
-  "Highlight changes": "Highlight changes",
+  "Highlight changes": "하이라이트 변경",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
   "Created": "생성됨",
@@ -832,12 +832,12 @@
   "Something went wrong": "문제가 발생했습니다",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "죄송합니다. 페이지를 로드하는 중에 알 수 없는 오류가 발생했습니다. 다시 시도하거나 문제가 지속되면 지원팀에 문의하세요.",
   "Created by me": "내가 생성함",
-  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
-  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
+  "Weird, this shouldn't ever be empty": "이상합니다. 이 값은 비어 있을 수 없습니다",
+  "Documents with recent activity will appear here": "최근 활동이 있는 문서가 여기에 표시됩니다",
   "You haven’t created any documents yet": "아직 문서를 만들지 않았습니다.",
   "Documents you’ve recently viewed will be here for easy access": "쉽게 액세스할 수 있도록 최근에 본 문서가 여기에 표시됩니다.",
-  "{{ count }} invites sent": "{{ count }} invites sent",
-  "{{ count }} invites sent_plural": "{{ count }} invites sent",
+  "{{ count }} invites sent": "{{ count }} 개 초대 발송",
+  "{{ count }} invites sent_plural": "{{ count }} 개 초대 발송",
   "Those email addresses are already invited": "해당 이메일 주소는 이미 초대되어 있습니다.",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "죄송합니다. 한 번에 {{MAX_INVITES}} 명만 초대할 수 있습니다.",
   "Invited {{roleName}} will receive access to": "초대된 {{roleName}} 은(는) 다음 접근 권한을 가집니다",
@@ -899,7 +899,7 @@
   "Triggers": "트리거",
   "Mention users and more": "사용자 멘션 및 기타",
   "Insert block": "블록 삽입",
-  "Continue with Passkey": "Continue with Passkey",
+  "Continue with Passkey": "패스키로 계속 진행",
   "Passkeys are not supported in the desktop app": "데스크톱 앱에서는 패스키가 지원되지 않습니다",
   "Sign In": "로그인",
   "Continue with Email": "이메일로 계속하기",
@@ -1022,7 +1022,7 @@
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "애플리케이션을 사용하면 Outline과 내부 또는 공개 통합을 구축하고 OAuth를 통해 보안 액세스를 제공할 수 있습니다. 자세한 내용은 <em>개발자 문서</em>를 참조하세요.",
   "Settings saved": "설정이 저장되었습니다",
   "Are you sure?": "확실합니까?",
-  "Removing": "Removing",
+  "Removing": "삭제중",
   "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "이 인증 공급자를 제거하면 회원이 {{ authProvider }}를 사용하여 로그인할 수 없게 됩니다.",
   "Manage how members sign-in to your workspace and which authentication providers are enabled.": "작업공간에 멤버가 로그인하는 방법과 사용 가능한 인증 공급자를 관리하세요.",
   "Allow members to sign-in with {{ authProvider }}": "멤버가 {{ authProvider }} 으로 로그인하도록 허용",
