--- a/shared/i18n/locales/ro_RO/translation.json
+++ b/shared/i18n/locales/ro_RO/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "Light",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Appearance",
   "Change theme": "Change theme",
