fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Sombre",
   "Light": "Clair",
+  "Toggle theme": "Toggle theme",
   "System": "Système",
   "Appearance": "Apparence",
   "Change theme": "Changer le thème",
