fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Oscuro",
   "Light": "Claro",
+  "Toggle theme": "Toggle theme",
   "System": "Sistema",
   "Appearance": "Apariencia",
   "Change theme": "Cambiar tema",
