fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Temný",
   "Light": "Světlý",
+  "Toggle theme": "Toggle theme",
   "System": "Systém",
   "Appearance": "Vzhled",
   "Change theme": "Změnit motiv",
