fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Mørk",
   "Light": "Lys",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Udseende",
   "Change theme": "Skift tema",
