fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Version herunterladen",
   "Dark": "Dunkel",
   "Light": "Hell",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Erscheinungsbild",
   "Change theme": "Design ändern",
