fix: New Hebrew translations from Crowdin [ci skip]

--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "בהיר",
+  "Toggle theme": "Toggle theme",
   "System": "מערכת",
   "Appearance": "מראה",
   "Change theme": "שינוי ערכת נושא",
