fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Sötét",
   "Light": "Világos",
+  "Toggle theme": "Toggle theme",
   "System": "Rendszer",
   "Appearance": "Megjelenés",
   "Change theme": "Téma váltása",
