fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Scarica revisione",
   "Dark": "Scuro",
   "Light": "Chiaro",
+  "Toggle theme": "Toggle theme",
   "System": "Sistema",
   "Appearance": "Aspetto",
   "Change theme": "Cambia tema",
