fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "ダークモード",
   "Light": "ライトモード",
+  "Toggle theme": "Toggle theme",
   "System": "システム",
   "Appearance": "テーマ",
   "Change theme": "テーマを変更",
