fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "수정본 다운로드",
   "Dark": "어둡게 보기",
   "Light": "밝게 보기",
+  "Toggle theme": "Toggle theme",
   "System": "시스템",
   "Appearance": "외관",
   "Change theme": "테마 변경",
