fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revisie",
   "Dark": "Donker",
   "Light": "Licht",
+  "Toggle theme": "Toggle theme",
   "System": "Systeem",
   "Appearance": "Uiterlijk",
   "Change theme": "Thema wijzigen",
