fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Ciemny",
   "Light": "Jasny",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Wygląd",
   "Change theme": "Zmień motyw",
