fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Mörk",
   "Light": "Ljus",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Utseende",
   "Change theme": "Ändra tema",
