fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Koyu",
   "Light": "Açık",
+  "Toggle theme": "Toggle theme",
   "System": "Sistem",
   "Appearance": "Görünüm",
   "Change theme": "Temayı değiştir",
