fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Темна",
   "Light": "Світла",
+  "Toggle theme": "Toggle theme",
   "System": "Системна",
   "Appearance": "Вигляд",
   "Change theme": "Змінити тему",
