fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "下载版本",
   "Dark": "深色模式",
   "Light": "浅色模式",
+  "Toggle theme": "Toggle theme",
   "System": "跟随系统",
   "Appearance": "界面风格",
   "Change theme": "更改主题",
