fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "深色",
   "Light": "淺色",
+  "Toggle theme": "Toggle theme",
   "System": "依照系統",
   "Appearance": "介面設定",
   "Change theme": "變更主題",
