fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "Light",
+  "Toggle theme": "Toggle theme",
   "System": "Hệ thống",
   "Appearance": "Giao diện",
   "Change theme": "Thay đổi chủ đề",
