fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Escuro",
   "Light": "Claro",
+  "Toggle theme": "Toggle theme",
   "System": "Sistema",
   "Appearance": "Aparência",
   "Change theme": "Alterar tema",
