fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Gelap",
   "Light": "Cerah",
+  "Toggle theme": "Toggle theme",
   "System": "Sistem",
   "Appearance": "Tampilan",
   "Change theme": "Ubah tema",
