fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "تیره",
   "Light": "روشن",
+  "Toggle theme": "Toggle theme",
   "System": "سامانه",
   "Appearance": "ظاهر برنامه",
   "Change theme": "تغییر قالب",
