fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "มืด",
   "Light": "สว่าง",
+  "Toggle theme": "Toggle theme",
   "System": "ระบบ",
   "Appearance": "ลักษณะ",
   "Change theme": "เปลี่ยนธีม",
