--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -147,6 +147,7 @@
   "Download revision": "Download revision",
   "Dark": "Mørk",
   "Light": "Lys",
+  "Toggle theme": "Toggle theme",
   "System": "System",
   "Appearance": "Utseende",
   "Change theme": "Endre tema",
